--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic01.JPG" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
 											<h3>El Captain, Yosemite National Park</h3>
 										</header>
@@ -100,7 +100,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.JPG" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
 											<h3>Mount Whitney, basecamp</h3>
 										</header>
@@ -113,7 +113,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.JPG" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
 											<h3>Matthes Crest, Tuolumne</h3>
 										</header>
@@ -124,7 +124,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic04.JPG" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>The Lost Coast</h3>
 										</header>
