--- a/index.html
+++ b/index.html
@@ -20,31 +20,6 @@
 			<!-- Header -->
 				<header id="header" class="alt">
 					<h1 id="logo"><a href="index.html">california adventures<span> by Thuy Nguyen</a></h1>
-					<nav id="nav">
-						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button special">Sign Up</a></li>
-						</ul>
-					</nav>
 				</header>
 
 			<!-- Banner -->
@@ -73,10 +48,6 @@
 
 			<!-- Main -->
 				<article id="main">
-
-				
-
-
 
 					<!-- Three -->
 						<section class="wrapper style3 container special">
@@ -133,18 +104,18 @@
 
 								</div>
 							</div>
-
+<!--
 							<footer class="major">
 								<ul class="buttons">
 									<li><a href="#" class="button">See More</a></li>
 								</ul>
-							</footer>
+							</footer>-->
 
 						</section>
 
 				</article>
 
-			<!-- CTA -->
+			<!-- CTA 
 				<section id="cta">
 
 					<header>
@@ -158,21 +129,19 @@
 						</ul>
 					</footer>
 
-				</section>
+				</section>-->
 
 			<!-- Footer -->
 				<footer id="footer">
-
+<!--
 					<ul class="icons">
 						<li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li>
-					</ul>
+					</ul>-->
 
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Thuy Nguyen</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</footer>
